[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Platform.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/Moony_asteroids/meteorBrown_big1.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Area2D.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6.48561, 8.52706 )

[sub_resource type="RectangleShape2D" id=2]

[node name="Platform" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
disabled = true

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1.54755, 1.0317 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -0.515839, -2.06341 )
scale = Vector2( 1.5, 1.4 )
shape = SubResource( 2 )
[connection signal="body_entered" from="Area2D" to="Area2D" method="_on_body_entered_as_platform"]
[connection signal="body_exited" from="Area2D" to="Area2D" method="_on_body_exited_as_platform"]
