[gd_scene load_steps=19 format=2]

[ext_resource path="res://Scenes/stars.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/TileMap/Planet2.tres" type="TileSet" id=2]
[ext_resource path="res://Scripts/Area2D.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Camera.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Spawner.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4.11765, 20 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4.39216, 13.4 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 5.29412, 22.2 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 0.725492, 12.6 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 2.84313, 30 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 0.745097, 10 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 0.627449, 4 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 0.392157, 4 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 0.627453, 4 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 0.60257, 10 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 0.725489, 10 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 9.99981, 15.2314 )

[node name="World" type="Node2D"]

[node name="stars" parent="." instance=ExtResource( 1 )]

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 0, 2, 0, 1, 2, 0, 2, 2, 0, 3, 2, 0, 4, 2, 0, 5, 2, 0, 6, 2, 0, 7, 2, 0, 8, 2, 0, 9, 2, 0, 10, 2, 0, 11, 2, 0, 12, 2, 0, 13, 2, 0, 14, 2, 0, 15, 1, 0, 16, 1, 0, 17, 2, 0, 18, 2, 0, 19, 2, 0, 20, 2, 0, 21, 2, 0, 22, 1, 0, 23, 1, 0, 24, 2, 0, 25, 2, 0, 26, 2, 0, 27, 2, 0, 28, 2, 0, 29, 2, 0, 30, 2, 0, 31, 2, 0, 65536, 2, 0, 65537, 2, 0, 65538, 2, 0, 65539, 2, 0, 65540, 2, 0, 65541, 2, 0, 65542, 2, 0, 65543, 2, 0, 65544, 2, 0, 65545, 2, 0, 65546, 2, 0, 65547, 2, 0, 65548, 2, 0, 65549, 2, 0, 65550, 2, 0, 65551, 1, 0, 65552, 1, 0, 65553, 2, 0, 65554, 2, 0, 65555, 2, 0, 65556, 2, 0, 65557, 2, 0, 65558, 1, 0, 65559, 1, 0, 65560, 2, 0, 65561, 2, 0, 65562, 2, 0, 65563, 2, 0, 65564, 2, 0, 65565, 2, 0, 65566, 2, 0, 65567, 2, 0, 131072, 2, 0, 131073, 2, 0, 131074, 2, 0, 131075, 2, 0, 131076, 2, 0, 131077, 2, 0, 131078, 2, 0, 131079, 2, 0, 131080, 2, 0, 131081, 2, 0, 131082, 2, 0, 131083, 2, 0, 131084, 2, 0, 131085, 2, 0, 131086, 2, 0, 131087, 1, 0, 131088, 1, 0, 131089, 2, 0, 131090, 2, 0, 131091, 2, 0, 131092, 2, 0, 131093, 2, 0, 131094, 1, 0, 131095, 1, 0, 131096, 2, 0, 131097, 2, 0, 131098, 2, 0, 131099, 2, 0, 131100, 2, 0, 131101, 2, 0, 131102, 2, 0, 131103, 2, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196618, 0, 0, 196619, 0, 0, 196620, 0, 0, 196621, 0, 0, 196622, 0, 0, 196623, 0, 0, 196624, 0, 0, 196625, 2, 0, 196626, 2, 0, 196627, 2, 0, 196628, 2, 0, 196629, 2, 0, 196630, 0, 0, 196631, 0, 0, 196632, 0, 0, 196633, 0, 0, 196634, 0, 0, 196635, 0, 0, 196636, 0, 0, 196637, 0, 0, 196638, 0, 0, 196639, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0, 262154, 0, 0, 262155, 0, 0, 262156, 0, 0, 262157, 0, 0, 262158, 0, 0, 262159, 0, 0, 262160, 0, 0, 262161, 2, 0, 262162, 2, 0, 262163, 2, 0, 262164, 2, 0, 262165, 2, 0, 262166, 0, 0, 262167, 0, 0, 262168, 0, 0, 262169, 0, 0, 262170, 0, 0, 262171, 0, 0, 262172, 0, 0, 262173, 0, 0, 262174, 0, 0, 262175, 0, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 327688, 0, 0, 327689, 0, 0, 327690, 0, 0, 327691, 0, 0, 327692, 0, 0, 327693, 0, 0, 327694, 0, 0, 327695, 0, 0, 327696, 0, 0, 327697, 2, 0, 327698, 2, 0, 327699, 2, 0, 327700, 2, 0, 327701, 2, 0, 327702, 0, 0, 327703, 0, 0, 327704, 0, 0, 327705, 0, 0, 327706, 0, 0, 327707, 0, 0, 327708, 0, 0, 327709, 0, 0, 327710, 0, 0, 327711, 0, 0, 393216, 0, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 0, 393226, 0, 0, 393227, 0, 0, 393228, 0, 0, 393229, 0, 0, 393230, 0, 0, 393231, 0, 0, 393232, 0, 0, 393233, 0, 0, 393234, 0, 0, 393235, 2, 0, 393236, 2, 0, 393237, 2, 0, 393238, 0, 0, 393239, 0, 0, 393240, 0, 0, 393241, 0, 0, 393242, 0, 0, 393243, 0, 0, 393244, 0, 0, 393245, 0, 0, 393246, 0, 0, 393247, 0, 0, 458771, 2, 0, 458772, 2, 0, 458773, 2, 0, 458774, 2, 0, 524307, 2, 0, 524308, 2, 0, 524309, 2, 0, 524310, 2, 0, 589843, 2, 0, 589844, 2, 0, 589845, 2, 0, 589846, 2, 0, 655379, 2, 0, 655380, 2, 0, 655381, 2, 0, 655382, 2, 0, 720913, 0, 0, 720914, 0, 0, 720915, 2, 1, 720916, 2, 1, 720917, 0, 0, 720918, 0, 0, 720919, 1, 0, 720920, 1, 0, 720921, 1, 0, 720922, 1, 0, 720923, 1, 0, 720924, 1, 0, 720925, 1, 0, 720926, 1, 0, 720927, 1, 0, 786449, 0, 0, 786450, 0, 0, 786451, 2, 1, 786452, 2, 1, 786453, 0, 0, 786454, 0, 0, 786455, 1, 0, 786456, 1, 0, 786457, 1, 0, 786458, 1, 0, 786459, 1, 0, 786460, 1, 0, 786461, 1, 0, 786462, 1, 0, 786463, 1, 0, 851968, 1, 0, 851969, 1, 0, 851970, 1, 0, 851971, 1, 0, 851972, 1, 0, 851973, 1, 0, 851974, 1, 0, 851975, 1, 0, 851976, 1, 0, 851977, 1, 0, 851978, 1, 0, 851979, 1, 0, 851980, 1, 0, 851981, 1, 0, 851982, 1, 0, 851983, 1, 0, 851984, 1, 0, 851985, 2, 1, 851986, 2, 1, 851987, 2, 1, 851988, 2, 1, 851989, 1, 0, 851990, 1, 0, 851991, 1, 0, 851992, 1, 0, 851993, 1, 0, 851994, 1, 0, 851995, 1, 0, 851996, 1, 0, 851997, 1, 0, 851998, 1, 0, 851999, 1, 0, 917504, 1, 0, 917505, 1, 0, 917506, 1, 0, 917507, 1, 0, 917508, 1, 0, 917509, 1, 0, 917510, 1, 0, 917511, 1, 0, 917512, 1, 0, 917513, 1, 0, 917514, 1, 0, 917515, 1, 0, 917516, 1, 0, 917517, 1, 0, 917518, 1, 0, 917519, 2, 1, 917520, 2, 1, 917521, 2, 1, 917522, 2, 1, 917523, 2, 1, 917524, 2, 1, 917525, 1, 0, 917526, 1, 0, 917527, 1, 0, 917528, 1, 0, 917529, 1, 0, 917530, 1, 0, 917531, 1, 0, 917532, 1, 0, 917533, 1, 0, 917534, 1, 0, 917535, 1, 0, 983040, 1, 0, 983041, 1, 0, 983042, 1, 0, 983043, 1, 0, 983044, 1, 0, 983045, 1, 0, 983046, 1, 0, 983047, 1, 0, 983048, 1, 0, 983049, 1, 0, 983050, 1, 0, 983051, 1, 0, 983052, 1, 0, 983053, 2, 1, 983054, 2, 1, 983055, 2, 1, 983056, 2, 1, 983057, 2, 1, 983058, 2, 1, 983059, 1, 0, 983060, 1, 0, 983061, 1, 0, 983062, 1, 0, 983063, 1, 0, 983064, 1, 0, 983065, 1, 0, 983066, 1, 0, 983067, 1, 0, 983068, 1, 0, 983069, 1, 0, 983070, 1, 0, 983071, 1, 0, 1048576, 1, 0, 1048577, 1, 0, 1048578, 1, 0, 1048579, 1, 0, 1048580, 1, 0, 1048581, 1, 0, 1048582, 1, 0, 1048583, 1, 0, 1048584, 1, 0, 1048585, 1, 0, 1048586, 1, 0, 1048587, 1, 0, 1048588, 1, 0, 1048589, 2, 0, 1048590, 2, 0, 1048591, 2, 0, 1048592, 2, 0, 1048593, 1, 0, 1048594, 1, 0, 1048595, 1, 0, 1048596, 1, 0, 1048597, 1, 0, 1048598, 1, 0, 1048599, 1, 0, 1048600, 1, 0, 1048601, 1, 0, 1048602, 1, 0, 1048603, 1, 0, 1048604, 1, 0, 1048605, 1, 0, 1048606, 1, 0, 1048607, 1, 0, 1114112, 1, 1, 1114113, 1, 1, 1114114, 1, 1, 1114115, 1, 1, 1114116, 1, 1, 1114117, 1, 1, 1114118, 1, 1, 1114119, 1, 1, 1114120, 1, 1, 1114121, 1, 1, 1114122, 1, 1, 1114123, 1, 1, 1114124, 1, 0, 1114125, 2, 0, 1114126, 2, 0, 1114127, 2, 0, 1114128, 0, 0, 1114129, 0, 0, 1114130, 1, 1, 1114131, 1, 1, 1114132, 1, 1, 1114133, 1, 1, 1114134, 1, 1, 1114135, 1, 1, 1114136, 1, 1, 1114137, 1, 1, 1114138, 1, 1, 1114139, 1, 1, 1114140, 1, 1, 1114141, 1, 1, 1114142, 1, 1, 1114143, 1, 1, 1179648, 1, 1, 1179649, 1, 1, 1179650, 1, 1, 1179651, 1, 1, 1179652, 1, 1, 1179653, 1, 1, 1179654, 1, 1, 1179655, 1, 1, 1179656, 1, 1, 1179657, 1, 1, 1179658, 1, 1, 1179659, 1, 1, 1179660, 1, 0, 1179661, 2, 0, 1179662, 2, 0, 1179663, 2, 0, 1179664, 0, 0, 1179665, 0, 0, 1179666, 1, 1, 1179667, 1, 1, 1179668, 1, 1, 1179669, 1, 1, 1179670, 1, 1, 1179671, 1, 1, 1179672, 1, 1, 1179673, 1, 1, 1179674, 1, 1, 1179675, 1, 1, 1179676, 1, 1, 1179677, 1, 1, 1179678, 1, 1, 1179679, 1, 1, 1245184, 1, 0, 1245185, 1, 0, 1245186, 1, 0, 1245187, 1, 0, 1245188, 1, 0, 1245189, 1, 0, 1245190, 1, 0, 1245191, 1, 0, 1245192, 1, 0, 1245193, 1, 0, 1245194, 1, 0, 1245195, 1, 0, 1245196, 1, 0, 1245197, 2, 0, 1245198, 2, 0, 1245199, 2, 0, 1245200, 0, 0, 1245201, 0, 0, 1245202, 1, 0, 1245203, 1, 0, 1245204, 1, 0, 1245205, 1, 0, 1245206, 1, 0, 1245207, 1, 0, 1245208, 1, 0, 1245209, 1, 0, 1245210, 1, 0, 1245211, 1, 0, 1245212, 1, 0, 1245213, 1, 0, 1245214, 1, 0, 1245215, 1, 0, 1310720, 2, 0, 1310721, 2, 0, 1310722, 2, 0, 1310723, 2, 0, 1310724, 2, 0, 1310725, 2, 0, 1310726, 2, 0, 1310727, 2, 0, 1310728, 2, 0, 1310729, 2, 0, 1310730, 2, 0, 1310731, 2, 0, 1310732, 2, 0, 1310733, 2, 0, 1310734, 2, 0, 1310735, 2, 0, 1310736, 2, 0, 1310737, 2, 0, 1310738, 2, 0, 1310739, 2, 0, 1310740, 2, 0, 1310741, 2, 0, 1310742, 2, 0, 1310743, 2, 0, 1310744, 2, 0, 1310745, 2, 0, 1310746, 2, 0, 1310747, 2, 0, 1310748, 2, 0, 1310749, 2, 0, 1310750, 2, 0, 1310751, 2, 0, 1376256, 2, 0, 1376257, 2, 0, 1376258, 2, 0, 1376259, 2, 0, 1376260, 2, 0, 1376261, 2, 0, 1376262, 2, 0, 1376263, 2, 0, 1376264, 2, 0, 1376265, 2, 0, 1376266, 2, 0, 1376267, 2, 0, 1376268, 2, 0, 1376269, 2, 0, 1376270, 2, 0, 1376271, 2, 0, 1376272, 2, 0, 1376273, 2, 0, 1376274, 2, 0, 1376275, 2, 0, 1376276, 2, 0, 1376277, 2, 0, 1376278, 2, 0, 1376279, 2, 0, 1376280, 2, 0, 1376281, 2, 0, 1376282, 2, 0, 1376283, 2, 0, 1376284, 2, 0, 1376285, 2, 0, 1376286, 2, 0, 1376287, 2, 0, 1441792, 2, 0, 1441793, 2, 0, 1441794, 2, 0, 1441795, 2, 0, 1441796, 2, 0, 1441797, 2, 0, 1441798, 2, 0, 1441799, 2, 0, 1441800, 2, 0, 1441801, 2, 0, 1441802, 2, 0, 1441803, 2, 0, 1441804, 2, 0, 1441805, 2, 0, 1441806, 2, 0, 1441807, 2, 0, 1441808, 2, 0, 1441809, 2, 0, 1441810, 2, 0, 1441811, 2, 0, 1441812, 2, 0, 1441813, 2, 0, 1441814, 2, 0, 1441815, 2, 0, 1441816, 2, 0, 1441817, 2, 0, 1441818, 2, 0, 1441819, 2, 0, 1441820, 2, 0, 1441821, 2, 0, 1441822, 2, 0, 1441823, 2, 0 )

[node name="Area2D" type="Area2D" parent="."]
scale = Vector2( 51, 5 )
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 4.07843, 108 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 15.6863, 115.8 )
shape = SubResource( 2 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 5.33333, 67.4 )
shape = SubResource( 3 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 11.2157, 57.6 )
shape = SubResource( 4 )

[node name="CollisionShape2D5" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 17.2549, 74.6 )
shape = SubResource( 5 )

[node name="CollisionShape2D6" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 13.902, 93.2 )
shape = SubResource( 6 )

[node name="CollisionShape2D7" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 8.78432, 92.2 )
shape = SubResource( 7 )

[node name="CollisionShape2D8" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 11.0588, 106.4 )
shape = SubResource( 8 )

[node name="CollisionShape2D9" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 12.549, 100 )
shape = SubResource( 9 )

[node name="CollisionShape2D10" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 10.0641, 10 )
shape = SubResource( 10 )

[node name="CollisionShape2D11" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 14.5294, 10.2 )
shape = SubResource( 11 )

[node name="Area2D2" type="Area2D" parent="."]
scale = Vector2( 51, 5 )
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2( 10, -15.6 )
shape = SubResource( 12 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 512, 360 )
current = true
smoothing_enabled = true
script = ExtResource( 4 )
player_path = NodePath("../Player")

[node name="Enemy" parent="." instance=ExtResource( 5 )]
position = Vector2( 1024, 256 )
speed = -200
spawn_rate = 1.0

[node name="Enemy2" parent="." instance=ExtResource( 5 )]
position = Vector2( 0, 50 )
speed = 100
spawn_rate = 2.0

[node name="Enemy3" parent="." instance=ExtResource( 5 )]
position = Vector2( 1024, 0 )
speed = -50
spawn_rate = 4.0

[node name="Platform4" parent="." instance=ExtResource( 5 )]
position = Vector2( 950, 256 )
type = "platform"
speed = -200
spawn_rate = 1.0

[node name="Platform" parent="." instance=ExtResource( 5 )]
position = Vector2( 0, 320 )
type = "platform"
speed = 100
spawn_rate = 1.0

[node name="Platform2" parent="." instance=ExtResource( 5 )]
position = Vector2( 1024, 608 )
type = "platform"
spawn_rate = 1.0

[node name="Platform3" parent="." instance=ExtResource( 5 )]
position = Vector2( 0, 560 )
type = "platform"
speed = 100
spawn_rate = 0.8

[node name="Player" parent="." instance=ExtResource( 6 )]
position = Vector2( 490.869, 680.158 )
scale = Vector2( 2, 2 )
camera_path = NodePath("../Camera2D")
[connection signal="body_entered" from="Area2D" to="Area2D" method="_on_body_entered_as_death_area"]
[connection signal="body_exited" from="Area2D" to="Area2D" method="_on_body_exited_as_death_area"]
[connection signal="body_entered" from="Area2D2" to="Area2D2" method="_on_finish"]
